--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,4 +1,8 @@
 <div id='container'>
 <!-- Your code here -->
-  <h1> hello world </h1>
+  <h1> shorten page </h1>
+  <form name="shortenForm">
+    <input type='text'ng-model='link'>
+    <button ng-click='addLink(link)'>shorten</button>
+  </form>
 </div>
