--- a/client/index.html
+++ b/client/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
-    <h1>Shortly</h1>
+    <h1>Shortly Header</h1>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
+    <a href ='#/links'> Links </a>
+    <a href ='#/shorten'> Shorten </a>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
