--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Shortly Header</h1>
 
-    <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
+    <!-- the ng-view directive is where our templates will be loaded into when navigated to -->
     <div ng-view></div>
     <a href ='#/links' class="tab-button btn-default "> Links </a>
     <a href ='#/shorten' class="tab-button btn-default "> Shorten </a>
